collapse filter and fix top

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -90,6 +90,49 @@ user-select: none;
 /*******************/
 /* filter */
 
+.enc-filter {
+    background-color: #e1e2e1;
+    padding: .5rem;
+}
+
+.enc-filter-btn {
+    color: #fdfdfd;
+}
+
+.enc-filter-header {
+    background-color: #51caaa !important;
+    padding: .5rem;
+}
+
+.enc-filter-header:not(.collapsed)::after {
+    color: #fdfdfd;
+}
+
+.enc-filter-header::after {
+    color: #fdfdfd;
+}
+
+.filter {
+    padding: .5rem;
+    border:1px solid rgba(255, 255, 255, 0.5);
+    border-radius: .375rem;
+}
+
+.selectAnimal {
+    margin: 0;
+    padding: .5rem;
+    border: 1px solid rgba(0,187, 144, 0.5);
+    border-radius: .375rem;
+}
+
+
+.enc-btn-submit-filter:focus {
+    color: #fff;
+    background-color: #51caa3;
+    border-color: #009874;
+    box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.5);
+}
+
 /********************/
 /* general overflow */
 
